[gd_scene load_steps=12 format=3 uid="uid://b3f7sgdq0vcus"]

[ext_resource type="Script" path="res://Scenes/play_space.gd" id="1_tiu1l"]
[ext_resource type="Shader" path="res://Scenes/play_space.gdshader" id="2_1c3mb"]
[ext_resource type="Script" path="res://Scenes/PlayerHand.gd" id="2_6wkpr"]
[ext_resource type="Texture2D" uid="uid://dh6qp40mxftx5" path="res://Cards/tatami3.jpg" id="3_q8x1q"]
[ext_resource type="PackedScene" uid="uid://cdi57ij2t13pr" path="res://Scenes/card_slot.tscn" id="5_w00en"]
[ext_resource type="Texture2D" uid="uid://cwcy35e1mv1xj" path="res://Cards/Deck.png" id="7_kj8w7"]
[ext_resource type="Script" path="res://Scenes/stopwatch.gd" id="9_qe662"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3ostw"]
shader = ExtResource("2_1c3mb")
shader_parameter/opacity = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1lfed"]
size = Vector2(141.152, 237.638)

[sub_resource type="GDScript" id="GDScript_srln5"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_8d85i"]
properties/0/path = NodePath("PlayerHand:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="PlaySpace" type="Node2D"]
script = ExtResource("1_tiu1l")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.783523, 0.783523, 0.783523, 1)
z_index = 1
material = SubResource("ShaderMaterial_3ostw")
offset_right = 1081.0
offset_bottom = 722.0
mouse_filter = 2
color = Color(0.294118, 0.313726, 0.25098, 0)

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(561, 386)
scale = Vector2(0.17442, 0.163274)
texture = ExtResource("3_q8x1q")

[node name="Cards" type="Node" parent="."]

[node name="Deck" type="Node2D" parent="."]
z_index = 3
position = Vector2(509, 339)
scale = Vector2(0.630525, 0.563883)

[node name="Area2D" type="Area2D" parent="Deck"]
position = Vector2(4.57764e-05, 1.77344)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
position = Vector2(2.37898, -3.54683)
shape = SubResource("RectangleShape2D_1lfed")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
position = Vector2(6.34392, -5.32025)
scale = Vector2(0.76433, 0.901529)
texture = ExtResource("7_kj8w7")

[node name="CardSlots" type="Node" parent="."]

[node name="CardSlot" parent="CardSlots" instance=ExtResource("5_w00en")]
position = Vector2(100, 400)

[node name="CardSlot2" parent="CardSlots" instance=ExtResource("5_w00en")]
position = Vector2(250, 400)

[node name="CardSlot3" parent="CardSlots" instance=ExtResource("5_w00en")]
position = Vector2(100, 550)

[node name="CardSlot4" parent="CardSlots" instance=ExtResource("5_w00en")]
position = Vector2(250, 550)

[node name="CardSlot5" parent="CardSlots" instance=ExtResource("5_w00en")]
position = Vector2(800, 400)

[node name="CardSlot6" parent="CardSlots" instance=ExtResource("5_w00en")]
position = Vector2(800, 550)

[node name="CardSlot7" parent="CardSlots" instance=ExtResource("5_w00en")]
position = Vector2(950, 400)

[node name="CardSlot8" parent="CardSlots" instance=ExtResource("5_w00en")]
position = Vector2(950, 550)

[node name="PlayerHand" type="Node2D" parent="."]
position = Vector2(583, 518)
script = ExtResource("2_6wkpr")

[node name="DisplayText" type="Label" parent="."]
visible = false
modulate = Color(0.129558, 0.129558, 0.129558, 1)
z_index = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_right = 75.0
offset_bottom = 83.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "Hello"
script = SubResource("GDScript_srln5")

[node name="timeText" type="Label" parent="."]
visible = false
offset_left = 456.0
offset_top = 561.0
offset_right = 563.0
offset_bottom = 616.0
theme_override_font_sizes/font_size = 40
text = "Time"

[node name="time" type="Label" parent="."]
visible = false
offset_left = 458.0
offset_top = 629.0
offset_right = 567.0
offset_bottom = 684.0
theme_override_font_sizes/font_size = 40
text = "2.552"

[node name="endText" type="Label" parent="."]
visible = false
offset_left = 412.0
offset_top = 286.0
offset_right = 609.0
offset_bottom = 341.0
theme_override_colors/font_color = Color(0.0326484, 0.0577273, 0.0933875, 1)
theme_override_font_sizes/font_size = 40
text = "End Game"

[node name="averageTime" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -27.5
offset_right = 54.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.0976713, 0.0868673, 0.00884922, 1)
theme_override_font_sizes/font_size = 40
text = "2.552"
horizontal_alignment = 1

[node name="stopwatch" type="Node" parent="."]
script = ExtResource("9_qe662")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_8d85i")

[connection signal="input_event" from="Deck/Area2D" to="Deck" method="_on_area_2d_input_event"]
